--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ before_deploy:
     - eval "$(ssh-agent -s)"
     - openssl aes-256-cbc -K $encrypted_f9d920aaa6ff_key -iv $encrypted_f9d920aaa6ff_iv
       -in .deploy_key.enc -out /tmp/deploy_key -d
-    - chmod 600 /tmp/deploy_rsa
-    - ssh-add /tmp/deploy_rsa
+    - chmod 600 /tmp/deploy_key
+    - ssh-add /tmp/deploy_key
     - ssh-keyscan barry.podshows.fr >> ~/.ssh/known_hosts
 deploy:
 - provider: script
