--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "remark": "^11.0.1",
+    "remark-html": "^10.0.0",
+    "remark-preset-lint-recommended": "^3.0.3",
     "uuid": "^3.2.1"
   },
   "keywords": [
